# dualcam_esp32

./: .gitignore  README.md  TRANSFER_CONTEXT.md  calibrate_intrinsics.py  cap.rgb565  extract_frames_cap_only.py  header_layout.md  partitions.csv  rgb565.py  sdkconfig  sfs.ppm  sfs.rgb565  slave.md  udp_rgb565_viewer.py  vga.rgb565
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_main_capture_only.c  app_main_capture_only_qvga.c  app_main_slave.c  app_main_udp_rgb565.c  idf_component.yml
main/www/: index.html
psram_diag/: CMakeLists.txt  run_psram_diag.sh  sdkconfig  sdkconfig.defaults
psram_diag/main/: CMakeLists.txt  psram_diag.c
